# src/routes/leadRoutes.js
@@ -4,6 +4,6 @@ const router = express.Router()
 const { verifyPermission } = require('../middlewares/permissionsMiddleware')
 
 router.get('/', verifyPermission(["isAdmin", "isSalesManager"]), leadControllers.getLeads)
-router.get('/:id', verifyPermission(["isAdmin", "isSalesManager"]), leadControllers.getLeadById)
+router.get('/:leadId', verifyPermission(["isAdmin", "isSalesManager"]), leadControllers.getLeadById)
 
 module.exports = router
